# Chess-Alpha-Beta

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
scripts/: build_book.py
strong_chess_ai/: requirements.txt
strong_chess_ai/core/: _jit.py  bitboard.py  board.py  book.py  eval.py  search.py  tt.py  zobrist.py
strong_chess_ai/tests/: test_board.py  test_endgame.py  test_pawns.py  test_perf.py  test_search.py
strong_chess_ai/ui/: board_window.py  cli.py  controller.py  qt_gui.py  resources.py  view.py
